--- a/XYZReader/src/main/AndroidManifest.xml
+++ b/XYZReader/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Bacon">
+        android:theme="@style/AppTheme">
+        <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar">-->
+        <!--android:theme="@style/Theme.Bacon">-->
 
         <activity
             android:name=".ui.ArticleListActivity"
