--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -15,7 +15,7 @@ repositories {
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         minSdkVersion 16
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.0.0'
     compile 'com.android.support:cardview-v7:24.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    compile 'com.android.support:design:24.0.0'
 
 
     //Added for CoordinatorLayout
